# SimpleCMakeDemo

./: .gitignore  CMakeLists.txt  CMakePresets.json
cmake/: Utilities.cmake
dependencies/: CMakeLists.txt
docs/: Doxyfile
src/: CMakeLists.txt
src/app/: CMakeLists.txt  DemoApp.cpp
src/loaders/: CMakeLists.txt  DemoLoader.cpp  DemoLoader.h
src/types/: CMakeLists.txt  DemoConstants.h  DemoTypes.h
src/utils/: CMakeLists.txt
src/utils/math/: CMakeLists.txt  geometry.cpp  geometry.h  linalg.cpp  linalg.h
tests/: CMakeLists.txt  math_tests.cpp
work/: logger_config.json
